--- a/css/styles.css
+++ b/css/styles.css
@@ -10,10 +10,25 @@ body{
     font-size: 16px;
     line-height: 1.7;
     color: #777;
+    padding:30px
 }
 .header{
     height: 95vh;
     background-size: cover;
-    background-image: url("../img/hero.jpg");
-
+    /* Our linear gradient will be on top of the image and because of 0.8 opacity, image will be visible */
+    background-image: linear-gradient(to right bottom,rgba(126,213,111,0.8),rgba(40,180,131,0.8)) ,url("../img/hero.jpg");
+    background-position: top;
+    /* Clipping path to achieve the shape */
+    clip-path: polygon(0 0,100% 0, 100% 75vh, 0 100%);
+    /* For Styling elements inside of Header, so that left right is referenced by this element */
+    position: relative;
 }
+.logo-box{
+    position: absolute;
+    left: 40px;
+    top: 40px;
+}
+.logo{
+    height: 35px;
+}
+
