--- a/css/styles.css
+++ b/css/styles.css
@@ -46,10 +46,42 @@ body{
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 35px;
+    animation : moveInLeft 1s ease-out;
+    
 }
 .heading-primary-sub{
     display: block;
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 17.5px;
+    animation: moveInRight 1s ease-out;
+}
+/* Animation for text in header */
+@keyframes moveInLeft{
+    0%{
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+    80%{
+        opacity: 0.8;
+        transform: translateX(10px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+@keyframes moveInRight{
+    0%{
+        opacity: 0;
+        transform: translateX(100px);
+    }
+    80%{
+        opacity: 0.8;
+        transform: translateX(-10px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
