--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,7 @@ body{
     top: 38%;
     left: 50%;
     transform: translate(-50%,-50%);
+    text-align: center;
 }
 .heading-primary{
     color:white;
@@ -54,6 +55,7 @@ body{
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 17.5px;
+    margin-bottom: 60px;
     animation: moveInRight 1s ease-out;
 }
 /* Animation for text in header */
@@ -84,4 +86,26 @@ body{
         opacity: 1;
         transform: translateX(0);
     }
+}
+
+.btn:link,
+.btn:visited{
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 200px;
+    transition: all 0.2s;
+}
+.btn:hover{
+    transform:translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2) ;
+}
+.btn:active{
+    transform:translateY(1px);
+}
+.btn-white{
+    background-color:#fff;
+    color: #777;
+    
 }
