--- a/css/styles.css
+++ b/css/styles.css
@@ -1,22 +1,34 @@
 /* Setting padding and margin zero to reset Browser's settings  */
-*{
+*,
+*::after,
+*::after{
     margin : 0;
     padding: 0;
-    box-sizing: border-box;
+    /* This will make all elements of body to inherit the box-sizing property */
+    /* It's a slightly better practice to put it in body tag */
+    /* Doesn't make much difference though */
+    box-sizing: inherit;
+}
+html{
+    /* Settting font-size 62.5%(10px) to use rem further easily */
+    /* Now, 1rem = 10px so calculations become easier like 150px = 15rem */
+    font-size: 62.5%;
 }
 body{
     font-family: "Lato",sans-serif;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 1.6rem;
     line-height: 1.7;
     color: #777;
-    padding:30px
+    padding:3rem;
+    box-sizing: border-box;
 }
 .header{
     height: 95vh;
     background-size: cover;
     /* Our linear gradient will be on top of the image and because of 0.8 opacity, image will be visible */
     background-image: linear-gradient(to right bottom,rgba(126,213,111,0.8),rgba(40,180,131,0.8)) ,url("../img/hero.jpg");
+    /* Background remain "sticked" to top even as we resize */
     background-position: top;
     /* Clipping path to achieve the shape */
     clip-path: polygon(0 0,100% 0, 100% 75vh, 0 100%);
@@ -25,11 +37,11 @@ body{
 }
 .logo-box{
     position: absolute;
-    left: 40px;
-    top: 40px;
+    left: 4rem;
+    top: 4rem;
 }
 .logo{
-    height: 35px;
+    height: 3.5rem;
 }
 .text-box{
     position: absolute;
@@ -44,29 +56,29 @@ body{
 }
 .heading-primary-main{
     display: block;
-    font-size: 60px;
+    font-size: 6rem;
     font-weight: 400;
-    letter-spacing: 35px;
+    letter-spacing: 3.5rem;
     animation : moveInLeft 1s ease-out;
     
 }
 .heading-primary-sub{
     display: block;
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 700;
     letter-spacing: 17.5px;
-    margin-bottom: 60px;
+    margin-bottom: 6rem;
     animation: moveInRight 1s ease-out;
 }
 /* Animation for text in header */
 @keyframes moveInLeft{
     0%{
         opacity: 0;
-        transform: translateX(-100px);
+        transform: translateX(-10rem);
     }
     80%{
         opacity: 0.8;
-        transform: translateX(10px);
+        transform: translateX(1rem);
     }
     100%{
         opacity: 1;
@@ -76,11 +88,11 @@ body{
 @keyframes moveInRight{
     0%{
         opacity: 0;
-        transform: translateX(100px);
+        transform: translateX(10rem);
     }
     80%{
         opacity: 0.8;
-        transform: translateX(-10px);
+        transform: translateX(-1rem);
     }
     100%{
         opacity: 1;
@@ -92,9 +104,9 @@ body{
 .btn:visited{
     text-transform: uppercase;
     text-decoration: none;
-    padding: 15px 40px;
+    padding: 1.5rem 4rem;
     display: inline-block;
-    border-radius: 200px;
+    border-radius: 20rem;
     transition: all 0.2s;
     /* Set to relative for pseudo element to work */
     position: relative;
@@ -105,7 +117,7 @@ body{
 }
 .btn:hover{
     transform:translateY(-3px);
-    box-shadow: 0 10px 20px rgba(0,0,0,0.2) ;
+    box-shadow: 0 1rem 2rem rgba(0,0,0,0.2) ;
 }
 .btn:active{
     transform:translateY(1px);
@@ -120,7 +132,7 @@ body{
     width:100%;
     height: 100%;
     display: inline-block;
-    border-radius: 100px;
+    border-radius: 10rem;
     position: absolute;
     top: 0;
     left: 0;
@@ -138,7 +150,7 @@ body{
 @keyframes moveInBottom{
     0%{
         opacity: 0;
-        transform: translateY(30px);
+        transform: translateY(3rem);
     }
     100%{
         opacity: 1;
