--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,6 +5,8 @@ $color-primary-light:#7ED56F;
 $color-primary-dark:#28B485;
 $color-grey-dark:#777; 
 $color-white:#FFF;
+$color-black: #000;
+
 *,
 *::after,
 *::after{
@@ -40,42 +42,46 @@ body{
     clip-path: polygon(0 0,100% 0, 100% 75vh, 0 100%);
     /* For Styling elements inside of Header, so that left right is referenced by this element */
     position: relative;
+
+    /* & = .header */
+    &__logo-box{ 
+        position: absolute;
+        left: 4rem;
+        top: 4rem;
+    }
+    &__logo{
+        height: 3.5rem;
+    }
+    &__text-box{
+        position: absolute;
+        top: 38%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        text-align: center;
+    }
 }
-.logo-box{ 
-    position: absolute;
-    left: 4rem;
-    top: 4rem;
-}
-.logo{
-    height: 3.5rem;
-}
-.text-box{
-    position: absolute;
-    top: 38%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    text-align: center;
-}
+
 .heading-primary{
     color:$color-white;
     text-transform: uppercase;
+    &--main{
+        display: block;
+        font-size: 6rem;
+        font-weight: 400;
+        letter-spacing: 3.5rem;
+        animation : moveInLeft 1s ease-out;
+        
+    }
+    &--sub{
+        display: block;
+        font-size: 2rem;
+        font-weight: 700;
+        letter-spacing: 17.5px;
+        margin-bottom: 6rem;
+        animation: moveInRight 1s ease-out;
+    }
 }
-.heading-primary-main{
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-    animation : moveInLeft 1s ease-out;
-    
-}
-.heading-primary-sub{
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 17.5px;
-    margin-bottom: 6rem;
-    animation: moveInRight 1s ease-out;
-}
+
 /* Animation for text in header */
 @keyframes moveInLeft{
     0%{
@@ -106,52 +112,56 @@ body{
     }
 }
 
-.btn:link,
-.btn:visited{
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-    border-radius: 20rem;
-    transition: all 0.2s;
-    /* Set to relative for pseudo element to work */
-    position: relative;
-}
-.btn-animated{
-    animation: moveInBottom 2s ease-out .75s;
-    animation-fill-mode: backwards;
-}
-.btn:hover{
-    transform:translateY(-3px);
-    box-shadow: 0 1rem 2rem rgba(0,0,0,0.2) ;
-}
-.btn:active{
-    transform:translateY(1px);
-}
-.btn-white{
-    background-color:#fff;
-    color: #777;
+.btn{
+    &:link,&:visited{
+        text-transform: uppercase;
+        text-decoration: none;
+        padding: 1.5rem 4rem;
+        display: inline-block;
+        border-radius: 20rem;
+        transition: all 0.2s;
+        /* Set to relative for pseudo element to work */
+        position: relative;
+    }
+    &--animated{
+        animation: moveInBottom 2s ease-out .75s;
+        animation-fill-mode: backwards;
+    }
+    &:hover{
+        transform:translateY(-3px);
+        box-shadow: 0 1rem 2rem rgba($color-black,.2) ;
+    }
+    &:active{
+        transform:translateY(1px); 
+    }
+    &--white{
+        background-color:#fff;
+        color: #777;
+        
+    }
+    &::after{
+        content: "";
+        width:100%;
+        height: 100%;
+        display: inline-block;
+        border-radius: 10rem;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        transition:all 0.4s;
+    }
+    &-white::after{
+        background-color: #FFF;
+    }
+    &:hover::after{
+        transform:scaleX(1.4) scaleY(1.6);
+        opacity: 0; 
+    }
     
 }
-.btn::after{
-    content: "";
-    width:100%;
-    height: 100%;
-    display: inline-block;
-    border-radius: 10rem;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition:all 0.4s;
-}
-.btn-white::after{
-    background-color: #FFF;
-}
-.btn:hover::after{
-    transform:scaleX(1.4) scaleY(1.6);
-    opacity: 0; 
-}
+
+
 
 @keyframes moveInBottom{
     0%{
