--- a/css/styles.css
+++ b/css/styles.css
@@ -33,37 +33,41 @@ body {
   /* Clipping path to achieve the shape */
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   /* For Styling elements inside of Header, so that left right is referenced by this element */
-  position: relative;
-  /* & = .header */ }
-  .header__logo-box {
-    position: absolute;
-    left: 4rem;
-    top: 4rem; }
-  .header__logo {
-    height: 3.5rem; }
-  .header__text-box {
-    position: absolute;
-    top: 38%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center; }
+  position: relative; }
+
+.logo-box {
+  position: absolute;
+  left: 4rem;
+  top: 4rem; }
+
+.logo {
+  height: 3.5rem; }
+
+.text-box {
+  position: absolute;
+  top: 38%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center; }
 
 .heading-primary {
   color: #FFF;
   text-transform: uppercase; }
-  .heading-primary--main {
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-    animation: moveInLeft 1s ease-out; }
-  .heading-primary--sub {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 17.5px;
-    margin-bottom: 6rem;
-    animation: moveInRight 1s ease-out; }
+
+.heading-primary-main {
+  display: block;
+  font-size: 6rem;
+  font-weight: 400;
+  letter-spacing: 3.5rem;
+  animation: moveInLeft 1s ease-out; }
+
+.heading-primary-sub {
+  display: block;
+  font-size: 2rem;
+  font-weight: 700;
+  letter-spacing: 17.5px;
+  margin-bottom: 6rem;
+  animation: moveInRight 1s ease-out; }
 
 /* Animation for text in header */
 @keyframes moveInLeft {
@@ -88,7 +92,8 @@ body {
     opacity: 1;
     transform: translateX(0); } }
 
-.btn:link, .btn:visited {
+.btn:link,
+.btn:visited {
   text-transform: uppercase;
   text-decoration: none;
   padding: 1.5rem 4rem;
@@ -98,7 +103,7 @@ body {
   /* Set to relative for pseudo element to work */
   position: relative; }
 
-.btn--animated {
+.btn-animated {
   animation: moveInBottom 2s ease-out .75s;
   animation-fill-mode: backwards; }
 
@@ -106,11 +111,10 @@ body {
   transform: translateY(-3px);
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
 
-.btn
 .btn:active {
   transform: translateY(1px); }
 
-.btn--white {
+.btn-white {
   background-color: #fff;
   color: #777; }
 
