--- a/css/styles.css
+++ b/css/styles.css
@@ -14,56 +14,6 @@ html {
   /* Now, 1rem = 10px so calculations become easier like 150px = 15rem */
   font-size: 62.5%; }
 
-body {
-  font-family: "Lato",sans-serif;
-  font-weight: 400;
-  font-size: 1.6rem;
-  line-height: 1.7;
-  color: #777;
-  padding: 3rem;
-  box-sizing: border-box; }
-
-.header {
-  height: 95vh;
-  background-size: cover;
-  /* Our linear gradient will be on top of the image and because of 0.8 opacity, image will be visible */
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 131, 0.8)), url("../img/hero.jpg");
-  /* Background remain "sticked" to top even as we resize */
-  background-position: top;
-  /* Clipping path to achieve the shape */
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-  /* For Styling elements inside of Header, so that left right is referenced by this element */
-  position: relative; }
-  .header__logo-box {
-    position: absolute;
-    left: 4rem;
-    top: 4rem; }
-  .header__logo {
-    height: 3.5rem; }
-  .header__text-box {
-    position: absolute;
-    top: 38%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center; }
-
-.heading-primary {
-  color: white;
-  text-transform: uppercase; }
-  .heading-primary--main {
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-    animation: moveInLeft 1s ease-out; }
-  .heading-primary--sub {
-    display: block;
-    font-size: 2rem;
-    font-weight: 700;
-    letter-spacing: 17.5px;
-    margin-bottom: 6rem;
-    animation: moveInRight 1s ease-out; }
-
 /* Animation for text in header */
 @keyframes moveInLeft {
   0% {
@@ -86,6 +36,40 @@ body {
   100% {
     opacity: 1;
     transform: translateX(0); } }
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
+
+body {
+  font-family: "Lato",sans-serif;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 1.7;
+  color: #777;
+  padding: 3rem;
+  box-sizing: border-box; }
+
+.heading-primary {
+  color: #FFF;
+  text-transform: uppercase; }
+  .heading-primary--main {
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 3.5rem;
+    animation: moveInLeft 1s ease-out; }
+  .heading-primary--sub {
+    display: block;
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: 17.5px;
+    margin-bottom: 6rem;
+    animation: moveInRight 1s ease-out; }
 
 .btn:link, .btn:visited {
   text-transform: uppercase;
@@ -112,7 +96,7 @@ body {
   transform: translateY(1px); }
 
 .btn--white {
-  background-color: #fff;
+  background-color: #FFF;
   color: #777; }
   .btn--white::after {
     background-color: #FFF; }
@@ -129,10 +113,26 @@ body {
   z-index: -1;
   transition: all 0.4s; }
 
-@keyframes moveInBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(3rem); }
-  100% {
-    opacity: 1;
-    transform: translateY(0); } }
+.header {
+  height: 95vh;
+  background-size: cover;
+  /* Our linear gradient will be on top of the image and because of 0.8 opacity, image will be visible */
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/hero.jpg");
+  /* Background remain "sticked" to top even as we resize */
+  background-position: top;
+  /* Clipping path to achieve the shape */
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  /* For Styling elements inside of Header, so that left right is referenced by this element */
+  position: relative; }
+  .header__logo-box {
+    position: absolute;
+    left: 4rem;
+    top: 4rem; }
+  .header__logo {
+    height: 3.5rem; }
+  .header__text-box {
+    position: absolute;
+    top: 38%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
