--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,7 +1,13 @@
 $color-primary-green:#55C57A;
 $color-primary-light:#7ED56F;
 $color-primary-dark:#28B485;
-
 $color-grey-dark:#777;
 $color-white:#FFF;
 $color-black:#000;
+$color-grey-light-1:#F7F7F7;
+
+$default-font-size:1.6rem;
+
+$grid-width:144rem;
+$gutter-vertical:8rem;
+$gutter-horizontal:6rem;
