--- a/scss/components/_composition.scss
+++ b/scss/components/_composition.scss
@@ -5,18 +5,28 @@
         box-shadow: 0 1.5rem 4rem rgba($color: $color-black, $alpha: .4);
         border-radius: 2px;
         position: absolute;
-
+        transition: all .2s;
+        outline-offset: 2rem;
         &--p1{
             left: 0;
             top: -2rem;
         }
         &--p2{
-            left : 24rem;
-            top: 1rem;
+            right:0;
+            top: 2rem;
         }
         &--p3{
-            top: 20%;
-            left: 5rem;
+            top: 10rem;
+            left: 20%;
         }
+        &:hover{
+            transform:scale(1.05);
+            box-shadow: 0 2.5rem 4rem rgba($color-black,.5);
+            z-index: 20;
+            outline: 1.5rem solid $color-primary-green;
+        }
+    }
+    &:hover &__photo:not(:hover){
+        transform: scale(.95);
     }
 }
