--- a/css/styles.css
+++ b/css/styles.css
@@ -109,6 +109,15 @@ body {
   padding: 25rem 0;
   margin-top: -20vh; }
 
+.section-features {
+  padding: 20rem 0;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("../img/nat-4.jpg");
+  background-size: cover;
+  margin-top: -10rem;
+  transform: skewY(-8deg); }
+  .section-features > * {
+    transform: skewY(8deg); }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -188,12 +197,27 @@ body {
       top: 10rem;
       left: 20%; }
     .composition__photo:hover {
-      transform: scale(1.1);
+      transform: scale(1.05);
       box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
       z-index: 20;
       outline: 1.5rem solid #55C57A; }
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.95); }
+
+.feature-box {
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  transition: all .2s; }
+  .feature-box__icon {
+    font-size: 6rem;
+    color: green;
+    margin-bottom: .5rem; }
+  .feature-box:hover {
+    transform: translateY(-1.5rem) scale(1.03); }
 
 .header {
   height: 95vh;
@@ -237,6 +261,6 @@ body {
   .row .col-1-of-3 {
     width: calc((100% - 2*6rem) / 3); }
   .row .col-1-of-4 {
-    width: calc((100% - 6rem) / 4); }
+    width: calc((100% - 3*6rem) / 4); }
   .row .col-2-of-3 {
     width: calc(((100% - 2*6rem) / 3) + $gutter-horizontal); }
