--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -19,7 +19,7 @@
         width:calc((100% - 2*#{$gutter-horizontal}) / 3);
     }
     .col-1-of-4{
-        width:calc((100% - #{$gutter-horizontal}) / 4);
+        width:calc((100% - 3*#{$gutter-horizontal}) / 4);
     }
     .col-2-of-3{
         width: calc(((100% - 2*#{$gutter-horizontal}) / 3) + $gutter-horizontal); 
