--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -6,6 +6,12 @@ $color-white:#FFF;
 $color-black:#000;
 $color-grey-light-1:#F7F7F7;
 
+$color-secondary-light:#FFB900;
+$color-secondary-dark:#FF7730;
+
+$color-tertiary-light:#2998FF;
+$color-tertiary-dark:#5643FA;
+
 $default-font-size:1.6rem;
 
 $grid-width:144rem;
