--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,9 @@ body {
 .u-margin-bottom-small {
   margin-bottom: 1.5rem; }
 
+.u-margin-top-big {
+  margin-top: 8rem; }
+
 .section-about {
   background-color: #F7F7F7;
   padding: 25rem 0;
@@ -120,7 +123,7 @@ body {
 
 .section-tours {
   background-color: #F7F7F7;
-  padding: 25rem 0 50rem 0;
+  padding: 25rem 0 15rem 0;
   margin-top: -10rem; }
 
 .btn:link, .btn:visited {
@@ -152,6 +155,12 @@ body {
   color: #777; }
   .btn--white::after {
     background-color: #FFF; }
+
+.btn--green {
+  background-color: #55C57A;
+  color: #FFF; }
+  .btn--green::after {
+    background-color: #55C57A; }
 
 .btn::after {
   content: "";
@@ -228,9 +237,9 @@ body {
   perspective: 150rem;
   -moz-perspective: 150rem;
   position: relative;
-  height: 50rem; }
+  height: 52rem; }
   .card__side {
-    height: 40rem;
+    height: 52rem;
     width: 100%;
     position: absolute;
     top: 0;
@@ -247,6 +256,10 @@ body {
       transform: rotateY(180deg); }
       .card__side--back-1 {
         background-image: linear-gradient(to right bottom, #FFB900, #FF7730); }
+      .card__side--back-2 {
+        background-image: linear-gradient(to right bottom, #7ED56F, #28B485); }
+      .card__side--back-3 {
+        background-image: linear-gradient(to right bottom, #2998FF, #5643FA); }
   .card:hover .card__side--front {
     transform: rotateY(-180deg); }
   .card:hover .card__side--back {
@@ -260,10 +273,11 @@ body {
     .card__picture--1 {
       background-image: linear-gradient(to right bottom, #FFB900, #FF7730), url("../img/nat-5.jpg"); }
     .card__picture--2 {
-      background-image: url("../img/nat-5.jpg"); }
+      background-image: linear-gradient(to right bottom, #7ED56F, #28B485), url("../img/nat-6.jpg"); }
     .card__picture--3 {
-      background-image: url("../img/nat-5.jpg"); }
+      background-image: linear-gradient(to right bottom, #2998FF, #5643FA), url("../img/nat-7.jpg"); }
   .card__heading {
+    width: 75%;
     font-size: 2.8rem;
     font-weight: 300;
     text-transform: uppercase;
@@ -272,6 +286,42 @@ body {
     position: absolute;
     top: 12rem;
     right: 2rem; }
+  .card__heading-span {
+    padding: 1rem 1.5rem; }
+    .card__heading-span--1 {
+      background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
+    .card__heading-span--2 {
+      background-image: linear-gradient(to right bottom, #7ed56f, #28b485); }
+    .card__heading-span--3 {
+      background-image: linear-gradient(to right bottom, #2998ff, #5643fa); }
+  .card__details {
+    padding: 4rem; }
+    .card__details ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto; }
+      .card__details ul li {
+        text-align: center;
+        font-size: 1.5rem;
+        padding: 1rem; }
+        .card__details ul li:not(:last-child) {
+          border-bottom: 1px solid rgba(0, 0, 0, 0.15); }
+  .card__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 75%;
+    text-align: center; }
+  .card__price-box {
+    text-align: center;
+    color: #FFF; }
+  .card__price-only {
+    font-size: 1.5rem;
+    text-transform: uppercase; }
+  .card__price-value {
+    font-size: 6rem;
+    font-weight: 100; }
 
 .header {
   height: 95vh;
