--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -32,6 +32,13 @@
         background-color: $color-white;
         }
     }
+    &--green{
+        background-color: $color-primary-green;
+        color: $color-white; 
+        &::after{
+            background-color: $color-primary-green;
+            }
+    }
     &::after{
         content: "";
         width:100%;
