--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -6,9 +6,9 @@
     //Made __side absolute so making this relative.
     position: relative;
     //Setting height because it collapsed as its children were absolute.
-    height: 50rem;
+    height: 52rem;
     &__side{
-        height: 40rem;
+        height: 52rem;
         width:100%;
         position: absolute;
         top: 0;
@@ -21,7 +21,7 @@
         box-shadow: 0 1.5rem 4rem rgba($color: $color-black, $alpha: .2);
         &--front{
             background-color: $color-white; 
-        }
+        } 
         &--back{
             background-color: green;
             //Back side will be 180deg by default(2-sided card)
@@ -29,11 +29,17 @@
             &-1{
                 background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
             }
-        }  
-    } 
+            &-2{
+                background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+            }
+            &-3{
+                background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark);
+            }
+        }   
+    }  
     &:hover &__side--front{
         //When card is hovered, front goes to the back.
-        transform: rotateY(-180deg);
+        transform: rotateY(-180deg); 
     } 
     &:hover &__side--back{
         //Back side comes to the front.
@@ -49,13 +55,14 @@
             background-image:  linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), url("../img/nat-5.jpg");
         }
         &--2{
-            background-image: url("../img/nat-5.jpg"); 
+            background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark),url("../img/nat-6.jpg"); 
         }
         &--3{
-            background-image: url("../img/nat-5.jpg");
+            background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark),url("../img/nat-7.jpg");
         }
     }
     &__heading{
+        width: 75%;
         font-size: 2.8rem;
         font-weight: 300;
         text-transform: uppercase;  
@@ -65,4 +72,59 @@
         top: 12rem;
         right: 2rem;
     }
-}         
+    //Its whole new element, so separate.
+    &__heading-span{
+        padding : 1rem 1.5rem; 
+        &--1{
+            background-image: linear-gradient(to right bottom,
+                                rgba($color-secondary-light,1),
+                                rgba($color-secondary-dark,1));
+        } 
+        &--2{
+            background-image: linear-gradient(to right bottom,
+                                rgba($color-primary-light,1),
+                                rgba($color-primary-dark,1));
+        } 
+        &--3{
+            background-image: linear-gradient(to right bottom,
+                                rgba($color-tertiary-light,1),
+                                rgba($color-tertiary-dark,1));
+        } 
+    } 
+    &__details{ 
+        padding: 4rem;
+         ul{
+             list-style: none;
+             width: 80%;
+             margin: 0 auto ;
+            li{
+                text-align: center;
+                font-size: 1.5rem;
+                padding: 1rem;
+                &:not(:last-child){
+                    border-bottom: 1px solid rgba($color: $color-black, $alpha: .15);
+                }
+            }
+        }
+    }
+    &__cta{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform:translate(-50%,-50%);
+        width: 75%;
+        text-align: center;
+    }
+    &__price-box{
+        text-align: center;
+        color: $color-white;
+    }
+    &__price-only{
+        font-size: 1.5rem;
+        text-transform: uppercase;
+    }
+    &__price-value{
+        font-size:6rem;
+        font-weight: 100;
+    }
+}                          
