Completed section-stories

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -12,6 +12,7 @@ $color-secondary-dark:#FF7730;
 $color-tertiary-light:#2998FF;
 $color-tertiary-dark:#5643FA;
 
+//FONT_SIZE
 $default-font-size:1.6rem;
 
 $grid-width:144rem;
