--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,7 +14,9 @@
 @import "components/button";
 @import "components/composition";
 @import "components/feature-box";
+@import "components/bg-video";
 @import "components/card";
+@import "components/story";
 
 @import "layout/header";
 @import "layout/grid"; 
