--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,6 +18,8 @@
 @import "components/card";
 @import "components/story";
 @import "components/book";
+@import "components/form";
 
 @import "layout/header";
 @import "layout/grid"; 
+@import "layout/footer"; 
