--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -5,6 +5,8 @@ $color-grey-dark:#777;
 $color-white:#FFF;
 $color-black:#000;
 $color-grey-light-1:#F7F7F7;
+$color-grey-dark-2:#999;
+$color-grey-dark-3:#333;
 
 $color-secondary-light:#FFB900;
 $color-secondary-dark:#FF7730;
