--- a/scss/main.scss
+++ b/scss/main.scss
@@ -20,6 +20,7 @@
 @import "components/story";
 @import "components/book";
 @import "components/form";
+@import "components/popup";
 
 @import "layout/header";
 @import "layout/grid"; 
