--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -2,8 +2,16 @@
     background-color: $color-grey-dark-3;
     padding: 10rem 0;
     font-size: 1.4rem;
+
+    @include respond(tab-port){
+        padding: 8rem 0;  
+    }
+
     &__logo-box{
         text-align: center;
+        @include respond(tab-port){
+            margin-bottom: 4rem;
+        }
     }
     &__logo{
         width: 15rem;
@@ -12,7 +20,12 @@
     &__navigation{
         border-top: 1px solid $color-grey-light-1;
         padding-top: 2rem;
-        display: inline-block;
+        // display: inline-block;
+
+        @include respond(tab-port){
+            width: 100%;
+            text-align: center;
+        }
     }
     &__list{
         list-style: none;
@@ -20,7 +33,10 @@
     &__item{
         display: inline-block;
         &:not(:last-child){
-            margin-right: 1.5rem;
+            margin-right: 3.5rem;
+            @include respond(tab-port){
+                margin-right: 1rem;
+            }
         }
     } 
     &__link{
@@ -40,5 +56,9 @@
     &__copyright{
         border-top: 1px solid $color-grey-light-1;
         padding-top: 2rem; 
+        @include respond(tab-port){
+            width: 100%;
+            text-align: center;
+        }
     }
 }     
