--- a/scss/abstracts/_mixins.scss
+++ b/scss/abstracts/_mixins.scss
@@ -11,3 +11,44 @@
     left: 50%;
     transform: translate(-50%,-50%);
 }
+//MEDIA QUERY MANAGER
+/* 
+0 - 600px     : Phone
+600 - 900px   : Tablet Portrait
+900 - 1200px  : Tablet Landscape
+[1200 - 1800px] is where our normal styles apply
+1800px +      : Big Desktop
+
+ORDER : Base + Typography > general layout + grid > page layout > components
+$breakpoint args choices:
+- phone
+- tab-port
+- tab-land
+- big-desktop
+*/
+@mixin respond($breakpoint){
+    
+   
+   
+    @if $breakpoint == big-desktop{
+        @media (min-width:112.5em) { // 1800+px
+            @content;
+        }
+    }
+    
+    @if $breakpoint == tab-land{
+        @media (max-width:75em) { // 1200px
+            @content;
+        }
+    }
+    @if $breakpoint == tab-port{
+        @media (max-width:56.25em) {  // 900px
+            @content;
+        }
+    }
+    @if $breakpoint == phone{
+        @media (max-width: 37.5em) { // 600px
+            @content;
+        }
+    }
+} 
