--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -10,7 +10,28 @@
     box-sizing: inherit;
 }
 html{
-    /* Settting font-size 62.5%(10px) to use rem further easily */
+    /* Settting font-size 62.5%(10px/16px) to use rem further easily */
     /* Now, 1rem = 10px so calculations become easier like 150px = 15rem */
     font-size: 62.5%;
+
+    
+   
+   
+    @include respond(big-desktop){
+        font-size: 75%;            // 1rem = 12, 12/16 = 75%
+    }
+    
+    @include respond(tab-land){
+        font-size: 56.25%;         //1rem = 9px, 9/16 = 56.25%
+    }
+    @include respond(tab-port){
+        font-size: 50%;         //1rem = 8px, 8/16 = 50% 
+    }
+}
+body{
+    padding:3rem;
+    box-sizing: border-box; 
+    @include respond(tab-port){
+        padding: 0;
+    }
 }
