--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,11 +1,9 @@
 body{
     font-family: "Lato",sans-serif; 
     font-weight: 400;
-    font-size: $default-font-size;
     line-height: 1.7;
     color: #777;
-    padding:3rem;
-    box-sizing: border-box; 
+   
 }
 .heading-primary{
     color:$color-white;
@@ -16,15 +14,21 @@ body{
         font-weight: 400;
         letter-spacing: 3.5rem;
         animation : moveInLeft 1s ease-out;
-        
+        @include respond(phone){
+            letter-spacing: 1rem;
+            font-size: 5rem;
+        }
     }
     &--sub{
         display: block;
         font-size: 2rem;
         font-weight: 700;
-        letter-spacing: 17.5px;
+        letter-spacing: 1.75rem;
         margin-bottom: 6rem;
         animation: moveInRight 1s ease-out;
+        @include respond(phone){
+            letter-spacing: .6rem;
+        }
     }
 }
 .heading-secondary{
@@ -34,9 +38,16 @@ body{
     display: inline-block;
     background-image: linear-gradient(to right,$color-primary-light,$color-primary-dark);
     -webkit-background-clip: text;
+    background-clip: text;
     color: transparent;
     letter-spacing: 2px;     
     transition:all .2s;
+    @include respond(tab-port){
+        font-size: 3rem;
+    }
+    @include respond(phone){
+        font-size: 2.5rem;
+    }
     &:hover{
         transform: skewY(2deg) skewX(15deg);  
         text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
