--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -3,10 +3,15 @@
     &:visited{
     text-transform: uppercase;
     text-decoration: none;
+    // font-size: 1.5rem;
     padding: 1.5rem 4rem;
     display: inline-block;
     border-radius: 20rem;
     transition: all 0.2s;
+
+    // @include respond(phone){
+    //     font-size: 1rem;
+    // }
     /* Set to relative for pseudo element to work */
     position: relative;
     }
