--- a/scss/components/_composition.scss
+++ b/scss/components/_composition.scss
@@ -7,17 +7,37 @@
         position: absolute;
         transition: all .2s;
         outline-offset: 2rem;
+        @include respond(tab-port){
+            float: left;
+            position: relative;
+            width: 33.3333%;
+            box-shadow: 0 1.5rem 3rem rgba($color: $color-black, $alpha: .2);
+         }
         &--p1{
             left: 0;
             top: -2rem;
+            @include respond(tab-port){
+                top: 0; 
+                transform: scale(1.2);
+            }
         }
         &--p2{
             right:0;
             top: 2rem;
+            @include respond(tab-port){
+                top: -1rem;  
+                transform: scale(1.3);
+                z-index: 900;
+            }
         }
         &--p3{
             top: 10rem;
             left: 20%;
+            @include respond(tab-port){
+                top:  0; 
+                left: 0;
+                transform: scale(1.2);
+            }
         }
         &:hover{
             transform:scale(1.05);
