--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -16,6 +16,15 @@
         right: 6.5rem;
         text-align: center;
         cursor: pointer;
+
+        @include respond(tab-port){
+            top: 4rem;      
+            right: 4rem;  
+        }
+        @include respond(phone){
+            top: 3rem;      
+            right: 3rem;  
+        }
     } 
 
 
@@ -30,6 +39,14 @@
         right: 6.5rem;
         box-shadow: 0 1rem 3rem rgba($color: $color-black, $alpha: .2);
         transition: transform .8s;
+        @include respond(tab-port){
+            top: 4rem;      
+            right: 4rem;  
+        }
+        @include respond(phone){
+            top: 3rem;      
+            right: 3rem;  
+        }
     }
     &__nav{
         height: 100vh;
