--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -1,8 +1,18 @@
 .row{
     max-width: $grid-width;
-    margin:0 6rem;
+    margin:0 auto;
+    @media (min-width:900px) {
+        margin : 0 6rem;
+    }
     &:not(:last-child){
         margin-bottom: $gutter-vertical;
+
+        @include respond(tab-port){
+            margin-bottom: $gutter-vertical-small;
+        }
+    }
+    @include respond(tab-port){
+        max-width: 50rem;
     }
     @include clearfix;
     
@@ -10,6 +20,13 @@
         float: left;
         &:not(:last-child){
             margin-right: $gutter-horizontal;
+            @include respond(tab-port){
+                margin-right: 0;
+                margin-bottom: $gutter-vertical-small;
+            }
+        }
+        @include respond(tab-port){
+            width: 100% !important;
         }
     }
     .col-1-of-2{
@@ -22,7 +39,7 @@
         width:calc((100% - 3*#{$gutter-horizontal}) / 4);
     }
     .col-2-of-3{
-        width: calc(((100% - 2*#{$gutter-horizontal}) / 3) + $gutter-horizontal); 
+        width: calc(((100% - 2*#{$gutter-horizontal}) / 3) + #{$gutter-horizontal}); 
     }
      
 }
