--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -2,6 +2,9 @@
     background-color: $color-grey-light-1;
     padding:25rem 0;
     margin-top: -20vh;
+    @include respond(tab-port){
+        padding: 20rem 0;
+    }
 }
 .section-features{
     padding: 20rem 0;
@@ -15,15 +18,24 @@
     & > *{
         transform: skewY(8deg);
     }
+    @include respond(tab-port){
+        padding: 15rem 0;
+    }
 }
 .section-tours{
     background-color: $color-grey-light-1;
     padding:25rem 0 15rem 0;
     margin-top: -10rem;
+    @include respond(tab-port){
+        padding: 20rem 0 10rem 0;
+    }
 }
 .section-stories{
     padding: 15rem 0;
     position: relative;
+    @include respond(tab-port){
+        padding: 10rem 0;
+    }
 } 
 .section-book{
     padding: 10rem 10rem;
